--- a/lab10/index.html
+++ b/lab10/index.html
@@ -6,11 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
-    <script src="script.js"></script> <!-- Link to external JavaScript file -->
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <title>Products eCommerce Store</title>
-    <style> /* com */
-        /* Add your existing CSS styles here */
+    <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
             background-color: #7a7b80;
@@ -55,7 +54,6 @@
             <option>jewelery</option>
             <option>women's clothing</option>
             <option>electronics</option>
-            <!-- Add your categories dynamically if needed -->
         </select>
 
         <div id="sort">
