--- a/lab10/index.html
+++ b/lab10/index.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <title>Products eCommerce Store</title>
     <style>
@@ -41,21 +40,20 @@
 </head>
 <body>
 <div class="navbar">
-    <a href="#"> Ecom </a>
     <a href="#">Home</a>
     <a href="#">Product</a>
 </div>
 <div class="container p-3">
     <h2>Fake eCommerce Store</h2>
     <div class="filters">
+        <label for="category_filter">Select a Category:</label>
         <select name="category_filter" id="category_filter" onchange="filterProducts()">
             <option>All Products</option>
-            <option>men's clothing</option>
-            <option>jewelery</option>
-            <option>women's clothing</option>
-            <option>electronics</option>
+            <option>Men's Clothing</option>
+            <option>Jewelry</option>
+            <option>Women's Clothing</option>
+            <option>Electronics</option>
         </select>
-
         <div id="sort">
             <label>Sort By:
                 <select name="sort_order" id="sort_order" onchange="sortProducts()">
@@ -67,7 +65,7 @@
                 </select>
             </label>
         </div>
-
+        <label for="searchText">Search Products:</label>
         <div id="search" class="navbar-search">
             <input name="searchText" id="searchText" placeholder="Search products...">
             <button class="btn btn-primary" onclick="searchProducts()">Search</button>
@@ -75,7 +73,6 @@
     </div>
     <div id="product-list" class="row g-5 py-5"></div>
 </div>
-
 <script src="script.js"></script>
 </body>
 </html>
