--- a/lab8/index.html
+++ b/lab8/index.html
@@ -18,7 +18,7 @@
             color: #b6a122;
         }
         #problem5 {
-            color: #5fc439;
+            color: #000000;
         }
     </style>
 </head>
