--- a/lab10/index.html
+++ b/lab10/index.html
@@ -31,7 +31,7 @@
         }
         .navbar a:hover {
             background-color: #125b0c;
-            color: black;
+            color: rgb(124, 12, 12);
         }
         .filters {
             margin-top: 20px;
